SecurityConfiguration fix to consider production URLs and not only local